--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@ body {
   background-color: rgb(15, 15, 25);
   color: rgb(250, 250, 250);
   min-height: 100vh;
+  font-family: var(--font-inter);
 }
 
 /* Custom utility classes */
